--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install build tools
-      run: brew install automake autoconf libtool pkg-config
+      run: brew reinstall automake autoconf libtool pkg-config
 
     - name: Install libinotify-kqueue
       # brew does not have libinotify package
@@ -24,7 +24,7 @@ jobs:
         cd libinotify-kqueue
         autoreconf -fvi
         ./configure
-        make
+        make -B
         sudo make install
         cd ..
 
@@ -36,13 +36,13 @@ jobs:
         cd sqlite-autoconf-3310100
         export CFLAGS='-DSQLITE_ENABLE_UNLOCK_NOTIFY=1'
         ./configure
-        make
+        make -B
         sudo make install
         cd ..
 
     - name: Install gperf and antlr3
       run: |
-        brew install gperf
+        brew reinstall gperf
         chmod +x ./scripts/antlr35_install.sh
         ./scripts/antlr35_install.sh -y -p /usr/local
 
@@ -50,10 +50,10 @@ jobs:
       # The libbluray ffmpeg dependency fails without the chown (source: stackoverflow)
       run: |
         sudo chown -R $(whoami) $(brew --prefix)/*
-        brew install ffmpeg
+        brew reinstall ffmpeg
 
     - name: Install other dependencies
-      run: brew install libunistring libmxml confuse libplist sqlite libwebsockets libevent libgcrypt json-c protobuf-c libsodium gnutls pulseaudio mopidy/mopidy/libspotify
+      run: brew reinstall libunistring libmxml confuse libplist sqlite libwebsockets libevent libgcrypt json-c protobuf-c libsodium gnutls pulseaudio mopidy/mopidy/libspotify
 
     - name: Configure forked-daapd
       run: |
@@ -67,7 +67,7 @@ jobs:
         export LD_LIBRARY_PATH=$(brew --prefix openssl)/lib
         export CPATH=$(brew --prefix openssl)/include
         export PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig
-        make
+        make -B
 
     - name: Install forked-daapd
       run: sudo make install
