--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -13,12 +13,14 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    
+
+# libxml ffmpeg gperf
     - name: cleanup brew
-      run: brew uninstall libunistring libmxml confuse libplist sqlite libwebsockets libevent |
+      run: brew cleanup | 
+           brew cask cleanup |
+           brew uninstall libunistring confuse libplist sqlite libwebsockets libevent |
            brew uninstall libgcrypt json-c protobuf-c libsodium gnutls pulseaudio mopidy/mopidy/libspotify |
-           brew uninstall ffmpeg |
-           brew uninstall gperf automake autoconf libtool pkg-config
+           brew uninstall automake autoconf libtool pkg-config
 
     - name: Install build tools
       run: brew install automake autoconf libtool pkg-config
